NetBSD Problem Report #39726

From www@NetBSD.org  Sat Oct 11 21:25:08 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 6945563BA54
	for <gnats-bugs@gnats.netbsd.org>; Sat, 11 Oct 2008 21:25:08 +0000 (UTC)
Message-Id: <20081011212508.2BA3263B88A@narn.NetBSD.org>
Date: Sat, 11 Oct 2008 21:25:08 +0000 (UTC)
From: bseklecki@collaborativefusion.com
Reply-To: bseklecki@collaborativefusion.com
To: gnats-bugs@NetBSD.org
Subject: Soekris 5501-60 boot/bootxx 120 second delay
X-Send-Pr-Version: www-1.0

>Number:         39726
>Category:       kern
>Synopsis:       Soekris 5501-60 boot/bootxx 120 second delay
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Oct 11 21:30:00 +0000 2008
>Closed-Date:    Sat Nov 05 13:01:43 +0000 2011
>Last-Modified:  Sat Nov 05 13:01:43 +0000 2011
>Originator:     Brian A. Seklecki
>Release:        NetBSD 4 STABLE
>Organization:
Collaborative Fusion, Inc.
>Environment:
NetBSD nbsdbuild-i386-releng4.lab02 4.0_STABLE NetBSD 4.0_STABLE (GENERIC.MP-NOIPV6) #1: Tue Sep 16 18:21:40 EDT 2008  root@nbsdbuild-i386-releng4.lab02.pitbpa0.priv.collaborativefusion.com:/home/netbsd/src/sys/arch/i386/compile/obj/GENERIC.MP-NOIPV6 i386

>Description:
A number of batches of the Soekris 5501 exhibit a problem loading /boot and or usr/medec/bootxx_ffsv1
>How-To-Repeat:
comBIOS ver. 1.33  20070103  Copyright (C) 2000-2007 Soekris Engineering.

net5501

0256 Mbyte Memory                        CPU Geode LX 434 Mhz 

Pri Mas  TOSHIBA THNCF256MPG             LBA 978-16-32  250 Mbyte

Slot   Vend Dev  ClassRev Cmd  Stat CL LT HT  Base1    Base2   Int 
-------------------------------------------------------------------
0:01:2 1022 2082 10100000 0006 0220 08 00 00 A0000000 00000000 10
0:06:0 1106 3053 02000096 0117 0210 08 40 00 0000E101 A0004000 11
0:07:0 1106 3053 02000096 0117 0210 08 40 00 0000E201 A0004100 05
0:08:0 1106 3053 02000096 0117 0210 08 40 00 0000E301 A0004200 09
0:09:0 1106 3053 02000096 0117 0210 08 40 00 0000E401 A0004300 12
0:20:0 1022 2090 06010003 0009 02A0 08 40 80 00006001 00006101 
0:20:2 1022 209A 01018001 0005 02A0 08 00 00 00000000 00000000 
0:21:0 1022 2094 0C031002 0006 0230 08 00 80 A0005000 00000000 15
0:21:1 1022 2095 0C032002 0006 0230 08 00 00 A0006000 00000000 15

 1 Seconds to automatic boot.   Press Ctrl-P for entering Monitor.
NetBSD MBR boot

NetBSD/i386 ffsv1 Primary Bootstrap

[[[[[[[[Approximately 120 delay here]]]]]]]]]]

>> NetBSD/i386 BIOS Boot, Revision 3.3
>> (root@nbsdbuild-i386-releng4.lab02, Sat Oct 11 11:21:50 EDT 2008)
>> Memory: 639/261120 k
Press return to boot now, any other key for boot menu
booting hd0a:netbsd - starting in 0
>Fix:
Bill Blass <baringskiier@yahoo.com> reported having found a problem in src/sys/arch/i386/stand/lib/gatea20.c in gateA20().

Patch seen here:

  http://mail-index.netbsd.org/netbsd-users/2008/10/11/msg002179.html

I tested this on my 5501-60 and it seems to bypass the problem.

As for a permenant fix -- I'm not sure what kind of other check we can make for the Soekris vendor+model combination.

Bypassing the check doesn't cause any problems with Axiomtek NA-820 Appliance either (Phoenix/Award BIOS Console Redirection)

>Release-Note:

>Audit-Trail:
From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39726 CVS commit: src/sys/arch/i386/stand/lib
Date: Tue, 14 Oct 2008 14:18:12 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Tue Oct 14 14:18:11 UTC 2008

 Modified Files:
 	src/sys/arch/i386/stand/lib: biosmemx.S gatea20.c

 Log Message:
 PR kern/39726 Soekris 5501-60 boot/bootxx 120 second delay

 Try enabling A20 using an extended BIOS call before playing around with
 the keyboard controller or system config port.


 To generate a diff of this commit:
 cvs rdiff -r1.8 -r1.9 src/sys/arch/i386/stand/lib/biosmemx.S
 cvs rdiff -r1.10 -r1.11 src/sys/arch/i386/stand/lib/gatea20.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 25 Mar 2009 02:25:01 +0000
State-Changed-Why:
Is this fixed?


From: "Brian A. Seklecki" <bseklecki@collaborativefusion.com>
To: gnats-bugs@gnats.netbsd.org
Cc: 
Subject: Re: kern/39726
Date: Wed, 29 Apr 2009 11:22:45 -0400

 --=-vr7bEoUzPgRsFWjAFJYv
 Content-Type: text/plain
 Content-Transfer-Encoding: quoted-printable

 I tested this with -current sources from 04/29/2009 against a Net5501.
 The same problem exists; it appears to be exacerbated, evident in an
 even longer wait time than when originally reported.

 --=-vr7bEoUzPgRsFWjAFJYv
 Content-Type: application/pgp-signature; name="signature.asc"
 Content-Description: This is a digitally signed message part

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)

 iEYEABECAAYFAkn4cMAACgkQCne6BNDQ+R/pmACePdskK1SjPqEQtPUikV4+cVR+
 37kAn2hFtsR3BKeK4u7D4ftdDGcQ7Ug8
 =3pRF
 -----END PGP SIGNATURE-----

 --=-vr7bEoUzPgRsFWjAFJYv--

State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 06 May 2009 22:23:19 +0000
State-Changed-Why:
No such luck :(


Responsible-Changed-From-To: kern-bug-people->jmcneill
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Sun, 23 Aug 2009 12:29:00 +0000
Responsible-Changed-Why:
I have a fix.


State-Changed-From-To: open->feedback
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sun, 23 Aug 2009 12:33:21 +0000
State-Changed-Why:
I can confirm that this is no longer an issue for me on a net5501 with
comBIOS 1.33. Can you test as well?


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39726 CVS commit: src/sys/arch/i386/stand/lib
Date: Sun, 23 Aug 2009 12:31:05 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Sun Aug 23 12:31:05 UTC 2009

 Modified Files:
 	src/sys/arch/i386/stand/lib: gatea20.c

 Log Message:
 PR# kern/39726: Soekris 5501-60 boot/bootxx 120 second delay
 PR# port-i386/41162: A20 gate legacy hook cause long pxeboot delay on Soekris net5501

 Remove calls to delay() before polling KBD registers in gateA20().


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/arch/i386/stand/lib/gatea20.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Brian Seklecki <seklecki@noc.cfi.pgh.pa.us>
To: gnats-bugs@NetBSD.org
Cc: jmcneill@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: kern/39726 (Soekris 5501-60 boot/bootxx 120 second delay)
Date: Sat, 29 Aug 2009 14:30:20 -0400

 > I can confirm that this is no longer an issue for me on a net5501 with
 > comBIOS 1.33. Can you test as well?
 > 

 I confirm that it is fixed on my 5501-60 w/ v1.33.  Thanks to jmcneill@
 on IRC today.

 Note that simply rebuilding with sticky -rHEAD tag on
 sys/arch/i386/stand/lib/gatea20.c against netbsd-5 tree
 was insufficient; there must have been a combination of changes.

 Using -current binaries from :
    ../NetBSD-daily/HEAD/200908280000Z/i386/binary/sets/base.tgz

 On NetBSD-5 works fine.

 Also, a useful bit of wisdom for the archives, from jmcneill@:

   "A real simple way to build and test a new /boot without
   having to run build.sh, do something like:

   $ cd sys/arch/i386/stand/boot
   $ ${TOOLDIR}/bin/nbmake-i386 clean dependall
   $ sudo cp biosboot/obj/boot /"

 Thanks again to all!

 ~BAS

 > 
 > 




 This mail was sent via Mail-SeCure System.


State-Changed-From-To: feedback->pending-pullups
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sat, 29 Aug 2009 19:04:13 +0000
State-Changed-Why:
http://releng.netbsd.org/cgi-bin/req-5.cgi?show=923


From: David Laight <david@l8s.co.uk>
To: gnats-bugs@gnats.netbsd.org
Cc: 
Subject: RE: PR/39726
Date: Fri, 4 Dec 2009 21:00:54 +0000

 Pullup request is stalled because the delay may be needed on some systems.

 Maybe replace with a simple cpu spin that will (almost always) be
 long enough - since waiting even 100000 times too long won't matter!

 	David

 -- 
 David Laight: david@l8s.co.uk

Responsible-Changed-From-To: jmcneill->kern-bug-people
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Wed, 03 Nov 2010 12:43:13 +0000
Responsible-Changed-Why:
role account


State-Changed-From-To: pending-pullups->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 04 Nov 2010 05:43:52 +0000
State-Changed-Why:
releng didn't like the fix


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39726 CVS commit: [netbsd-5] src/sys/arch/i386/stand/lib
Date: Sun, 16 Oct 2011 23:38:52 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Oct 16 23:38:52 UTC 2011

 Modified Files:
 	src/sys/arch/i386/stand/lib [netbsd-5]: gatea20.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #923):
 	sys/arch/i386/stand/lib/gatea20.c: revision 1.12
 PR# kern/39726: Soekris 5501-60 boot/bootxx 120 second delay
 PR# port-i386/41162: A20 gate legacy hook cause long pxeboot delay on Soekris
 net5501
 Remove calls to delay() before polling KBD registers in gateA20().


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.11.4.1 src/sys/arch/i386/stand/lib/gatea20.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 05 Nov 2011 13:01:43 +0000
State-Changed-Why:
releng took the fix after all.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.