PR kern/39726 Soekris 5501-60 boot/bootxx 120 second delay

Try enabling A20 using an extended BIOS call before playing around with
the keyboard controller or system config port.